sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:12: error: not found: value red
    if(getColor(i)==red){ 
                    ^